*Empty MediaWiki Message*

--- a/Comomeer.mw
+++ b/Comomeer.mw
@@ -14,8 +14,7 @@ Et boargachtige vuuralpenlaand tusken de twee zuudelike täkke van et meer wörd
 Et wear roond et Comomeer is meestal meeld. Der hearst een [[Middellaanse Zeeklimaat]], woerduur as der tropiese en subtropiese plaanten gröait. Den weenterdag heuld et meer de umgewing wöarmer. In [[jannewaori|januwoari]] wörd et der duur mekoar 2°C en in [[juli]] 30 °C. Et water wörd in juli duur mekoar 24 °C. Der vaalt mer heel mangs [[snee]] en dan vuural op de heugere boargtöppe. Den meesten reagen vaalt in [[mei]] en et minst in et weenter.
 
 ==Toerisme==
-De meeste toeristen komt noar et Comomeer vuur et oetzicht, de weelde deers en de spa's.<ref>[http://www.inghams.co.uk/lakes-mountains-holidays/resorts/location/item165325/lake-como-selection/ Lake Como holidays], ''inghams.com'', 20 april 2010</ref> Watersporters komt der ok gearne, um te [[zealen (sport)|zealen]] [[weendsurfen]] en te [[kitesurfen]].<ref>[http://www.italiaspeed.com/2006/cars/fiat/06/kiteboardpro/0606.html 2006 Kiteboard Pro World Tour event, Lake Como], ''Italiaspeed.com'', 6 juni 2006</ref> In 1818 skreef [[Percy Bysshe Shelley]] an [[Thomas Love Peacock]]: "Dit meer oawerstig allens wat ik ooit an mooiheid ezeen hebbe, behalve de [[Arbutus unedo|arbutus]]-eilaanden van [[Killarney]]. Et is laank en smal en lik op nen machtigen rivier den't zik um de boargen en bossen kroonkelt.<ref>[http://www.gutenberg.org/files/19061/19061-h/19061-h.htm
-red. Francis W Halsey. "Seeing Europe with Famous Authors". volume VIII. Funk & Wagnells, 1914</ref>
+De meeste toeristen komt noar et Comomeer vuur et oetzicht, de weelde deers en de spa's.<ref>[http://www.inghams.co.uk/lakes-mountains-holidays/resorts/location/item165325/lake-como-selection/ Lake Como holidays], ''inghams.com'', 20 april 2010</ref> Watersporters komt der ok gearne, um te [[zealen (sport)|zealen]] [[weendsurfen]] en te [[kitesurfen]].<ref>[http://www.italiaspeed.com/2006/cars/fiat/06/kiteboardpro/0606.html 2006 Kiteboard Pro World Tour event, Lake Como], ''Italiaspeed.com'', 6 juni 2006</ref> In 1818 skreef [[Percy Bysshe Shelley]] an [[Thomas Love Peacock]]: "Dit meer oawerstig allens wat ik ooit an mooiheid ezeen hebbe, behalve de [[Arbutus unedo|arbutus]]-eilaanden van [[Killarney]]. Et is laank en smal en lik op nen machtigen rivier den't zik um de boargen en bossen kroonkelt.<ref>[http://www.gutenberg.org/files/19061/19061-h/19061-h.htm red. Francis W Halsey. "Seeing Europe with Famous Authors"]. volume VIII. Funk & Wagnells, 1914</ref>
 
 ==Comomeer in popkultuur==
 *In [[1995]] wör der nen film [[A Month by the Lake]] op enömmen op verskeaidene steas um et meer.
