*Empty MediaWiki Message*

--- a/Terrorisme.mw
+++ b/Terrorisme.mw
@@ -24,7 +24,7 @@ Wat terroristen, zo as [[Tomthy McVeigh]], wilt wraak tegen ne regearing.
 
 Andacht in de [[massamedia]] kan een heuwddool wean veur terroristen. Ze wilt hiermet andacht veur zaken dee aanders neet in et niejs komt. Wat leu vindt dit oetbuiting van de media.<ref>The Media and Terrorism: A Reassessment [[Paul Wilkinson (professor)|Paul Wilkinson]]. ''Terrorism and Political Violence'', Vol. 9, No. 2 (Zommer 1997), p. 51–64 . Oetgewen deur Frank Cass, London.</ref>
 
-Met et [[internet]] is der een niej kanaal kömmen woarop as groepen öare berichten verspreaden köant. Hierum bint der een antal moatregelen veur en tegen de groeperingen opzet. De Verenigde Nasies hef zin egene moatregel tegen terrorisme opzet.<ref>[http://www.un.org/sc/ctc/ Security Council Counter-Terrorism Committee. Bekekken op 17 juni 2009.</ref>
+Met et [[internet]] is der een niej kanaal kömmen woarop as groepen öare berichten verspreaden köant. Hierum bint der een antal moatregelen veur en tegen de groeperingen opzet. De Verenigde Nasies hef zin egene moatregel tegen terrorisme opzet.<ref>[http://www.un.org/sc/ctc/ Security Council Counter-Terrorism Committee]. Bekekken op 17 juni 2009.</ref>
 
 Massamedia zal mangs groepen dee zik bezig hooldt met terrorisme bewust vortloaten oet et niejs, um wiedter terrorisme tegen te goan. Dit kan disse groepen der too anzetten um slimmere terroristiese doaden te plegen um toch andacht te kriegen. James F. Pastor skreef at terroristen en de media op ne krange wieze van mekaar profiteert.<ref>Pastor, James F. Terrorism & Public Safety Policing: Implications of the Obama Presidency. Taylor & Francis, New York, NY. (2009) ISBN 978-1-4398-1580-9.</ref>
 
