*Empty MediaWiki Message*

--- a/Natuurkeuze.mw
+++ b/Natuurkeuze.mw
@@ -35,7 +35,7 @@ Et soort keuze kan in edeeld worden noar de oetwoarking op nen trek. Stabiliseri
 
 Keuzesoorten köant ook in edeeld worden noar öar oetwoarking op allelefrekweansie. Positieve keuze zorgt at ne allele vaker vuurkeump. Negatieve keuze vermeendert et. Det kan mekoar ook wier tegenwoarken: duur positieve keuze van een bepoald allele zöalt aandere alleles negatief ekeuzen worden. Doarnöast köant ze indeeld worden noar de oetwoarking op genetiese verskeaidenheaid. Zuwerende keuze zorget at verskil in de soort minimaal blif. Eawenwichtskeuze zorget at de verskeaidenheaid binnen de soort etzelfde blif. 
 
-[[Ofbeelding:Life cycle of a sexually reproducing organism.svg|thumb|right|Den [[Biologiesen leawenskreenk]] van nen leawensvorm wat zik seksueel vermeardert. Verskillende oonderdelen van natuurkeuze stoat bie de verskillende leawensfases.</ref>]]
+[[Ofbeelding:Life cycle of a sexually reproducing organism.svg|thumb|right|Den [[Biologiesen leawenskreenk]] van nen leawensvorm wat zik seksueel vermeardert. Verskillende oonderdelen van natuurkeuze stoat bie de verskillende leawensfases.]]
 
 Keuze kan ook indeeld worden noar de leawensfase van nen leawensvorm. Et verskilt per oonderzeuker wulke termen of der gebroekt wordt. Sommigen hooldt twee soorten keuze an: 
 #oawerleawingskeuze, woerduur de kaans tooneamp at ne eenling oawerleawt 
