*Empty MediaWiki Message*

--- a/Kornwallis.mw
+++ b/Kornwallis.mw
@@ -5,7 +5,7 @@
 
 Kornwallis hef n ruug en vake nog ongerept laandschap, waorvan [[Bodmin Moor]] n belangriek deel uutmaakt. t Hef n [[zeeklimaot]] mit redelik zachte wienters. Deurdat t der zwat nooit vriest bin veule soorten (in-evoerden) [[subtropies klimaot|subtropiese plaanten]] as [[palmenfamilie|palmen]] en kamerplaanten der ingeburgerd. Deurdat t der merakels veule kan regenen greuit [[Sphagnum|veenmosse]] der as kool, wat dan oek te marken is an de veule [[moor|moerassen]] die der bin. t Toerisme is de belangriekste bron van inkomsten, naost [[visserieje]], [[laandbouw]] en [[bloemeteelt]]. De industrie hef zit veural in de kuststejen [[Vaolmujen (Kornwallis)|Vaolmujen (Falmouth)]], [[Fowey]] en [[Penzance]].
 
-t Meest westelike punt hit ''Penn an Wlas'' ([[Engels]]: ''Land's End'') en is n belangrieke toeristiese trekpleister, liek as [[St Michael's Mount]]. Oek hef t graafschap n groot antal prehistoriese overbliefsels waoronder oerouwe tinmienen die uut de [[bronstied]] stammen. In de [[18e eeuw|18e[[ en [[19e eeuw]] was Kornwallis verantwoordelik veur 40% van de wereldproduksie van [[tin (element)|tin]]. n Kasteelruïne kortbie [[Tintagel]] wörden deur de Kornen (inwoeners van Kornwallis) ezien as de plekke waor Koning Arthur geboren is. n Bekende beziensweerdigheid is oek Eden Project, n botaniese tune mit twee kassekomplexen die evormd wörden deur meerdere [[geodetiese koepel]]s. Disse botaniese tune ligt in Bodelva, vuuf kilometer buten [[St Austell]].
+t Meest westelike punt hit ''Penn an Wlas'' ([[Engels]]: ''Land's End'') en is n belangrieke toeristiese trekpleister, liek as [[St Michael's Mount]]. Oek hef t graafschap n groot antal prehistoriese overbliefsels waoronder oerouwe tinmienen die uut de [[bronstied]] stammen. In de [[18e eeuw|18e]] en [[19e eeuw]] was Kornwallis verantwoordelik veur 40% van de wereldproduksie van [[tin (element)|tin]]. n Kasteelruïne kortbie [[Tintagel]] wörden deur de Kornen (inwoeners van Kornwallis) ezien as de plekke waor Koning Arthur geboren is. n Bekende beziensweerdigheid is oek Eden Project, n botaniese tune mit twee kassekomplexen die evormd wörden deur meerdere [[geodetiese koepel]]s. Disse botaniese tune ligt in Bodelva, vuuf kilometer buten [[St Austell]].
 
 In Kornwallis wördden der vrogger [[Kornies]] espreuken; der wörden eprobeert um disse uutestörven taal niej leven in te blaozen, zo is der bieveurbeeld n [[Wikipedie]] in t "Kernowek" en n [[regionalisme|regionalistiese]] [[politieke partieje]] [[Mebyon Kernow]], die lid is van de [[Europese Vrieje Alliansie]].
 
