*Empty MediaWiki Message*

--- a/Natuurkeuze.mw
+++ b/Natuurkeuze.mw
@@ -13,7 +13,7 @@ De [[baarkenspanner]]-mot keump in et [[Verenigd Keuninkriek]] in lechte en doon
 
 As de trekken woermet eenlingen een bettere kaans op vermeerdering hebt, duur egewen wordt van oolder töt noawas, dan is der in een volgend geslacht een wat heuger andeel rappe kanienen of bettere zunlechtumzetters bie algen. Dit wörd ''differensjele vermeerdering'' neumd. Ook al is et vuurdeel bie de vermeerdering mer heel klean, oawer völle geslachten wörd et nen oawerheersenden trek in de groep. De natuurlike umgewing kiest de trekken woermet den leawensvorm een vuurdeel hef oawer zinne soortgenoten. Zo komt der heanigeverskoewingen in et oeterlik of innerlik van leawensvörme. Charles Darwin was den eersten den as disse oetwoarking beskreef.
 
-Et idee van natuurkeuze is eulder as genenkennis, et oarfmechanisme in alle leawensvörme. In hudige wöarde gebuurt natuurkeuze an de haande van nen leawensvorm zin [[fenotype]] (zichtboare trekken), mer zeent de genetiese bouwsteender (et [[genotype]) oarfelik. De umgewing en et genmateriaal wat et metkrig van de oolders bepoalt dus wo as nen leawensvorm der oetzut.
+Et idee van natuurkeuze is eulder as genenkennis, et oarfmechanisme in alle leawensvörme. In hudige wöarde gebuurt natuurkeuze an de haande van nen leawensvorm zin [[fenotype]] (zichtboare trekken), mer zeent de genetiese bouwsteender (et [[genotype]]) oarfelik. De umgewing en et genmateriaal wat et metkrig van de oolders bepoalt dus wo as nen leawensvorm der oetzut.
 
 Zo komt natuurkeuze en genstudie bie mekoar, zo as beskrewen in de [[moderne sythese van evolusie]]. Um evolusietheorie volledig te beskriewen, mut der ook verteld worden wo as [[geneties verskil]] überhaupt ontsteet (zo as duur vervörming en [[seksuele vermeerdering]]). Der komt ook aandere evolusieverlopen bie kieken, zo as [[genetiesen drift]] en [[genenvlöai]]. Natuurkeuze is ene van de belangiekste mechanismen vuur et ontstoan van grote veraanderingen in de natuur.
 
