--- a/Marsmuziek.mw
+++ b/Marsmuziek.mw
@@ -1,59 +1,62 @@
-'''Marsmuziek''' (sprek oet: /{{IPA|'mæɾsməzik}}/) is n muzieksoort den't völle op ceremonies in t leager ebroekt wörd.
+'''Marsmusik''' is ne soorte musik den as vöäle up ceremonys in et leager gebruket wördt.
 
-== Kenmoarkn ==
-Nen mars is aait in ne tweedelige [[moate (muziek)|moatsoorte]] eskreewn. Det is n dudelik rechtlienig ritme en doarumme good te herkenn.
+== Kenmarken ==
+Nen mars is altyd in ne tweydeylige [[moate (muziek)|måtsoorte]] eskreaven. Hyrdöär köänet gruppen van lüde (meysttyds de musikanten selv, mär traditioneel ouk leygerunderdeylen) der eavenwichtig up marcheren.
 
-Bie optocht- en feestmärse is n toonsoort meesttieds [[majeur]] um ne opgewekte melodie te kriegn. Vake hebt märse ne dudelike heuwdmelodie en oondermelodie, zodet iedern ofzeunderlikn mars zin eegne karakter hef. Dit wörd nog verstoarkt duurdet vake de heuwdmelodie noa de oondermelodie nog es herhaald wörd. De snelheaid van disse märse lig vake tusken de 120 en 140 [[BPM]]. Disse snelheedn wordt doarumme vake ook wal ''marstempo'' eneumd. Nöast völle punteerde figuurn (nen achtsten tel met nen peunt, met doarnoa nen zesteendn) wordt ook völle [[triool]]n ebroekt.
+By parade- en feystmärse is de tounsoorte meysttyds [[majöör]], vöär ne upgewekte melody. Vake hebbet märse ne düdelike höyvdmelody en undermelody, so dat yderen afsünderliken mars syn eygene karakter hevt. Dit wördt verstarket döärdat de höyvdmelody meysttyds nå de teagenmelody herhaald wördt. De snelheid van disse märse ligt vake tüsken de 120 en 140 [[BPM]]. Vandår at disse snelheden ouk as 'marstempo' bekend ståt. Nöäst vöäle pünteerde figuren (nen achtsten tel med nen pünt, evolged döär nen sesteenden) hebt märse ouk vake [[triool|triolen]].
 
-Doodnmärse stoat vake in [[mineur]] en zeent völle laankzamer. In doodnmärse wörd zowat aait t punteerde ritme broekt, um de stoatigheaid te verstoarkn. Vake wordt dit soort märse ook op half tempo elop (één trad per twee tel).
+Doudenmärse ståt vake in [[minöör]] en sint langsamer. Et pünteerde ritme is starker anweasig, üm een ståtig gevööl te verstarken. Dit soort märse wördt in half tempo eloupen (eyn trad per twey tellen).
 
-== Gebroek ==
-=== Militair gebroek ===
-In t leager wordt märse völle gebroekt um t marstempo an te gewen tiedns t marsjeern, en um te zorgn det de soldoatn de moodvearn nit loatt hangn. Elk leageroonderdeel har in vroger tiedn zin eegn stel märse. Nen mars van de [[marine]] zal heel aanders kleenkn as nen mars van de [[kavvelerie|kavalerie]]. Vroger ha'j allene heurns en bazuuns en bepoarkt slagwoark um leagersignaaln an te geewn.
+Marsmusik is eskreaven vöär blåsgrupen en döär et gelüüd van de koaperen instrümenten good te herkennen.
 
-In [[België]] is t ''Groot Harmonieorkest van de Belgische Gidsen'' wied en zied bekeand um de sekure oetvoerings van Belgiese märse. [[Neerlaand]] hef n antal beroopskapeln, zoas de ''Marinierskapel der Koninklijke Marine'', de ''Koninklijke Militaire Kapel "Johan Willem Friso"'', de ''Kapel van de Koninklijke Luchtmacht'' en t ''Trompetterkorps der Bereden Wapens''.
+== Gebruuk ==
+=== Militair ===
+In et leyger wordt märse vöäle gebruked üm et louptempo an te geaven tydens et marcheren. Dårnöäst warren de upgewekte melodyen bedoold üm de suldåten moud in te blåsen. In vroger tyden had yder leygerunderdeyl een eygen stel märse. Dårby klünk nen mars van de [[marine]] heyl anders as van de [[kavalery]]. Vöärdat trumpetten öär intreade makeden, warren der alleyne höörns en basüüns, en beparked slagwark üm leygersignalen an te geaven.
 
-[[Duutslaand]] steet bekeand um de grote militeare marstradisie. Ieder regimeant har doar zinnen eegnen mars. Keuning [[Frearik Wilm III]] hef in zinne tied in Duutslaand t gebroek van bepoalde märse vaste legd. Alle märse dee't in t Duutse leager espöld wordt, goat terugge op disse verzameling van märse. Oonder de [[Nazi-Duutslaand|Nazi]]'s wördn völle prusiese märse broekt. t Majesteatelike geveul van disse märse pasn good bie öare ideejn oawer oawerheersing. Doarumme roopt beroomde märse as ''Preußens Gloria'' en ''Der Königgrätzer Marsch'' rechtevoort beaide bewoondering en wierstaand op.
+In [[Belgie]] is et ''Groot Harmonieorkest van de Belgische Gidsen'' wyd en syd bekend üm de seküre uutvoring van belgiske märse. In [[Neerlaand|Neaderland]] sint der een paar beroopskapellen, so as de ''Marinierskapel der Koninklijke Marine'', de ''Koninklijke Militaire Kapel "Johan Willem Friso"'', de ''Kapel van de Koninklijke Luchtmacht'' en et ''Trompetterkorps der Bereden Wapens''.
 
-=== Leefhebberieje ===
-In t 19de joarhoonderd wördn tiedns deftige feestn en bals märse espöld, um nen stoatigen sfeer te kriegn, nöast de opgewekte sfeer van de [[Wals (muziek)|wals]] en de [[polka]]. Vuural de femilie [[Strauss]] oet [[Oostenriek]] is bekeand ewördn met öare märse. Ook in [[opera]]'s en in wat [[ballet]]stukke zitt wal es märse in.
+Mär vöäral [[Düütskland]] steyt bekend üm de groute militaire marstradity. Yder regiment had dår nen eygenen mars. Köning [[Frederik Willem III]] leade in syne tyd et gebruuk van märse vaste. Alle märse van et düütske leyger gåt up disse versameling wearümme. Under de [[Nazi-düütskland|Nazis]] wörden vöäle prüsiske märse bruked. Et krachtige, majesteitelike gevööl van disse märse güng good by öäre ideyen oaver oaverhearsking. Dårümme roupet beroomde märse as ''Preußens Gloria'' en ''Der Königgrätzer Marsch'' noch altyd bewundering en wearstand up.
 
-Völle muziekvereniges in Neerlaand goat nog oawer stroate met bekeande märse, en op [[RTV Oost]] wörd elken zoaterdag n spesjaal programma ewiedt an bloasmuziek oonder n naamn ''Eawn Oetbloazn'', woer't ook völle märse in vuur komt.
+=== Leevhebberye ===
+In de 19. eyw wördden tydens deftige feyste en bals märse spöld üm nen ståtigen sfeer te krygen, nöäst de upgewekte sfeer van de [[Wals (musik)|wals]] en de [[polka]]. Vöäral de family [[Strauss]] uut [[Oustenryk]] is bekend ewörden van öäre märse. Ouk in [[opera]]'s en wat [[ballet]]stükke sittet noch wal es märse in. 
 
-=== Godsdeenstig gebroek ===
-Der zeent ook processiemärse vuur Roomsk gebroek, en doodnmärse: de ''Marche Funèbre''. Ook hier wörd n mars in ezat um stoatigheaid an t gebuurn te geewn.
- 
-== Bekeande märse ==
-Wat märse zeent geleefd um öare glorieuze oetstroaling, en wordt dus völle espöld duur korpsn oawer de hele weareld:
+Vöäle musikvereaniges gåt in Neaderland noch wal med märse oaver de stråte. Töt vöär een paar jår deyd [[RTV Oost]] noch alle såterdage under den naam ''Eawn Oetbloazen'' (''Eaven uutblåsen'') märse en andere blåsmusik drayen.
 
-* ''Radetzky Mars'', Op.228 (1848) door [[Johann Strauss jr.|Johann Strauss]] I; 
-eskreewn töt eare van n Oostenrieksen genneraal [[Joseph Radetzky]], den't [[Italië|Italiaanse rebeln]] versloagn har in [[Custoza]].
-* ''Preussen Gloria'', Gottfried Piefke
+=== Godsdeenstig ===
+Binnen et Roomsk-Katolicisme sint der een antal processymärse en doudenmärse: de ''Marche Funèbre''. 
+
+== Bekende märse ==
+Wat märse sint geleevd üm öäre gloriöse uutstråling. Dårümme wordet se döär korpsen oaver de heyle wearld espölled:
+
+* ''Radetzky Mars'', Op.228 (1848) döär [[Johann Strauss jr.|Johann Strauss]] I; Eskreaven vöär den oustenryksken generaal [[Joseph Radetzky]], den as [[Italië|italiaanske rebellen]] verslån had in [[Custoza]].
+* ''Preussens Gloria'', Gottfried Piefke
 * ''Yorckscher Marsch'', [[Ludwig van Beethoven]]
 * ''Klar zum gefecht'', ''Abschied der Gladiatoren'', [[Hermann Ludwig Blankenburg]]
-* ''Pomp And Circumstance March'' No. 1; door Sir [[Edward Elgar]] (1857-1934) 
-* ''Grote Mars uit Aida'' ; door [[Giuseppe Verdi]] (1813-1901) 
-* Mars uit de [[Notenkraker (ballet)|Notenkraker]] - suite ; door [[Pjotr Iljitsj Tsjaikovski]] (1840-1893)
-* ''Joyeuse Marche (Marche française)'' ; door [[Emmanuel Chabrier]] (1841 - 1894)
-* ''The Washington Post''; door [[John Sousa]] (1854-1932)
-* ''The Stars And Stripes Forever''; door John Philip Sousa
-* ''Colonel Bogey'' ; door [[Kenneth J. Alford]] (1881-1945) 
-* ''Einzug der Gladiatoren''; door [[Julius Fučík]] (1872-1916) 
-* ''Alte Kameraden'', Graf Zeppelin, In treue fest; door [[Carl Teike|Carl Albert Hermann Teike]] (1864-1922)
-* ''Mars der Medici''; door lange in t zeeknhoes eleagn te hebn, as daank an zinne ärtse vuur zinne geneazing.
-* ''Herauten Mars''; door Johan Wichers
-* ''Glück auf''; door Johan Wichers
-* ''Imperator''; door Johan Wichers
-* ''Huzarenmars''; door [[Hendrik Karels]] (1850-1927)
+* ''Pomp And Circumstance March'' No. 1; döär Sir [[Edward Elgar]] (1857-1934) 
+* ''Groten Mars uut Aida'' ; döär [[Giuseppe Verdi]] (1813-1901) 
+* Mars uut den [[Notenkraker (ballet)|Nöttenkraker]] - suite ; döär [[Pjotr Iljitsj Tsjaikovski]] (1840-1893)
+* ''Joyeuse Marche (Marche française)'' ; döär [[Emmanuel Chabrier]] (1841 - 1894)
+* ''The Washington Post''; döär [[John Sousa]] (1854-1932)
+* ''The Stars And Stripes Forever''; döär John Philip Sousa
+* ''Colonel Bogey'' ; döär [[Kenneth J. Alford]] (1881-1945) 
+* ''Einzug der Gladiatoren''; döär [[Julius Fučík]] (1872-1916) 
+* ''Alte Kameraden'', Graf Zeppelin, In treue fest; döär [[Carl Teike|Carl Albert Hermann Teike]] (1864-1922)
+* ''Mars der Medici''; döär Johan Wichers, as dank vöär syne behandeling in et sekenhuus.
+* ''Herauten Mars''; döär Johan Wichers
+* ''Glück auf''; döär Johan Wichers
+* ''Imperator''; döär Johan Wichers
+* ''Huzarenmars''; döär [[Hendrik Karels]] (1850-1927)
 
-In 2010 en 2011 was in de diskotheekn in [[Tweante]] ne Egerländer-oetvoering duur t [[Grenzland Sextett]] van n ooldn Pruusisen mars [http://www.youtube.com/watch?v=SBxXp8wQmeg ''Der Alte Dessauer''] nen echten sfeermaker.
+== In populaere kultuur ==
+* Ne Egerländer-uutvoring van den olden prüsisken mars ''Der Alte Dessauer'' döär et [[Grenzland Sextett]] is in twentske diskotheken nen echten gangmaker.
+* Döär et skeetspel [[Call of Duty]] kreag de ''Königgrätzer Marsch'' wear meyr bekendheid. Dårin wör den mars edrayed as spöllers suksesvulle missys vöär de düütske kante vulbrachten.
 
-== bekiekt ook ==
+== bekykt ouk ==
 * [[muziekkorps]]
 
-== Oetgoande verbeendings ==
-* [http://youtube.com/watch?v=kqxQdH5MlKg&mode=related&search= nen processiemars oet Sevilla]
-* [http://www.youtube.com/watch?v=odLv_FvJDZg&feature=related n Kapel van de Gidsen met klaroenn]
+== Uutgånde verbindingen ==
+* [http://youtube.com/watch?v=kqxQdH5MlKg&mode=related&search= processymars uut Sevilla]
+* [http://www.youtube.com/watch?v=odLv_FvJDZg&feature=related Den Kapel van de Gidsen med klaronen]
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Meziekstiel]]
