/* dorpen in de gemeente */

--- a/Beemster.mw
+++ b/Beemster.mw
@@ -25,7 +25,7 @@
 [[Ofbeelding:Midden_beemster.jpg|thumb|275px|Stroatjen in Middenbeemster]]
 '''Beemster'''  ([[Westfries|Westfrees]]: ''Biemster'') is ne gemeente en polder in de Nederlandse previnsie [[Noord-Hollaand]] en hef ne oppervlaakte van 72,08 km² (waorvan 2,80 km² water). De gemeente Beemster mek dele uut van de [[plusregio]] [[Stadsregio Amsterdam]]. 
 
-== Darpen in de gemeente ==
+== dorpen in de gemeente ==
 [[Darp]]en:
 * [[Middenbeemster]] (''Middenbiemster'')
 * [[Noordbeemster]] (''Noôrdbiemster'')
