--- a/Stoete.mw
+++ b/Stoete.mw
@@ -11,6 +11,7 @@ In [[Nederlaand]] wort zowel 's maarges bie 't [[ontbiet]] as 's mirregs bie 't 
 == Nedersaksisch ==
 * [[Drèents]]: ''stoet{{small()|e}}'' {{info|In 't Drèents hef ''brood'' de betiekenis ''roggebrood''}}
 * [[Graafschopper Platt]]: ''broad'' (Platduutse schriefwieze ''Broad'')
+* [[Sallands]]: ''brood'', ''stoete''
 * [[Grunnegs]]: ''stoede'', ''stoet{{small()|e}}'' {{info|In t Grunnegs bestaait t woord ''brood'' ook, moar het t as Nederlaandse betaikenis ''roggebrood''}}
 * [[Oostfreisk]]: ''stoet'' (Platduutske skriefwies: ''Stuut'')
 * [[Veluws]]: ''brood'', ''stoete'', ''brooi'' ([[Scharpenzeel (Gelderlaand)|Sjaarpezeel]])
