--- a/Zwolle.mw
+++ b/Zwolle.mw
@@ -28,7 +28,7 @@ Zwolle is in de [[middeleewn|middeleeuwen]] ontstaon op een dekzandrugge tussen 
 
 De oldste skriftelike vermelding, uut [[1040]], ef t aover n an Sinte-Michaël ewi'jde parochiekerke. In [[1230]] kreeg Zwolle van de Biskop van Utrecht stadsrechten. In de late middeleeuwen trad t toe töt de Anze en is t samen met [[Daeventer]] en [[Kampen (Overiessel)|Kampen]] n belangriek andelssentrum ewörren. In de [[15e eeuw]] leidde Geert Grote ier de 'Moderne toewi'jding'.
 
-Bi'j de stadsbraand van 1324 die an-estökken was döör [[Zweder van voorst|Zweder van Voorst]] gong biena d'eule stad in vlammen op. De kapel, et refter van de Bethlehemklooster en negen gebouwen bleven staon umdät zie van stien waren ebouwd. De stad werd naor 't westen toe herbouwd nao de brand.
+Bi'j de stadsbrand van 1324 die an esteuken was döör [[Zweder van voorst|Zweder van Voorst]] gong bi'jna d'eule stad in vlammen op. De kapel, et refter van de Bethlehemklooster en negen gebouwen bleven staon umdät zie van stien waren ebouwd. De stad werd naor 't westen toe herbouwd nao de brand.
 
 
 Zwolle be-öört samen met een paer andere gemeenten töt <nowiki>[[Regio Zwolle]]</nowiki>. Regio Zwolle is ien van de beste economiese lokasies van 't land.
