*Empty MediaWiki Message*

--- a/Jan_Willem_Schutte.mw
+++ b/Jan_Willem_Schutte.mw
@@ -2,5 +2,5 @@
 
 In 1983 is der 'n kunstwark, in vörme van 'n broansn beeld (inspireerd op oale foto's van hum), in 't sentrum van 'n Arnbarg ebouwd. Et beeld het "De Klepperman". Vandoar is 'e ok maskotte van 't stadtie Hadnbarg ewödn, veurnamelijk in 't touristiese zommer wonneer as n stad de name "Klepperstad" kreg.
 
-[[Kategorie:Sallaands artikel]]
+[[Kategorie:Sallaands artikel]] HIJ SEXTE MET REMBRAND VAN RIJN EN MET AMANZA
 [[Kategorie:Hardenbarg]]
