--- a/Polen.mw
+++ b/Polen.mw
@@ -7,7 +7,7 @@
 |}
 [[Bestaand:LocationPoland.png|215px|right|Ligging van Pooln in Uropa]]
 
-'''Pooln''' ([[Pools]]: ''Polska''), voloet '''Republiek Pooln''' (''Rzeczpospolita Polska'') is n laand in [[Mildn-Uropa]] en t is lid van de [[Uropese Unie]]. t Laand greanst in t westn an [[Duutslaand]], in t zuudn an [[Tsjechie]] en [[Slowaaknlaand]], in t oostn an [[Litauwn]], [[Wit-Roslaand]] en de [[Oekraïne]]. In t noordn greanst t an de [[Oostzee]] en [[Roslaand]] (de eksklave [[Kaliningrad]]). De heufdstad is [[Warschau]]. t Laand hef ne öppervlakte van 312.696 veerkaante kilometer<ref>Główny Urząd Statystyczny, dane za rok 2018, stan na 01.01.2018. [https://stat.gov.pl/obszary-tematyczne/ludnosc/ludnosc/powierzchnia-i-ludnosc-w-przekroju-terytorialnym-w-2018-roku,7,15.html]</ref><ref>Bankier.pl, Powierzchnia Polski wzrosła o 1643 ha [https://m.bankier.pl/wiadomosc/Powierzchnia-Polski-wzrosla-o-1643-ha-7603883.html]</ref> en t tealt 38,486 (2014) miljoen inwonners. Dat gef ne bevolkingsdichtheid van 123 inwonners/km².
+'''Pooln''' ([[Pools]]: ''Polska''), voloet '''Republiek Pooln''' (''Rzeczpospolita Polska'') is n laand in [[Mildn-Uropa]] en t is lid van de [[Uropese Unie]]. t Laand greanst in t westn an [[Duutslaand]], in t zuudn an [[Tsjechie]] en [[Slowaaknlaand]], in t oostn an [[Litauwn]], [[Wit-Roslaand]] en de [[Oekraïne]]. In t noordn greanst t an de [[Oostzee]] en [[Roslaand]] (de eksklave [[Kaliningrad]]). De heufdstad is [[Warschau]]. t Laand hef ne öppervlakte van 312.696 veerkaante kilometer<ref>[https://stat.gov.pl/obszary-tematyczne/ludnosc/ludnosc/powierzchnia-i-ludnosc-w-przekroju-terytorialnym-w-2018-roku,7,15.html Główny Urząd Statystyczny, gegeavens vöär 2018, per 01-01-2018.]</ref><ref>Bankier.pl, Powierzchnia Polski wzrosła o 1643 ha [https://m.bankier.pl/wiadomosc/Powierzchnia-Polski-wzrosla-o-1643-ha-7603883.html]</ref> en t tealt 38,486 (2014) miljoen inwonners. Dat gef ne bevolkingsdichtheid van 123 inwonners/km².
 
 De officiële taal is Poolsk. t Grootste deel van de Pooln is rooms (89%).
 
