--- a/Nysassiske_Skryvwyse.mw
+++ b/Nysassiske_Skryvwyse.mw
@@ -5,8 +5,8 @@ Vöärdeylen van disse skryvwyse sint ünder ander:<br>
 * leasbårheid vöär beide syden
 * gelykberechtiging vöär alle dialekten up beide kanten van de grense
 * vryheid de eygen uutspråke up en skreaven tekst to öäverdrägen
-* wedderkenbåre woordvormen öäver alle dialekten
-* wedderkenbåre vorm vöär de språke algemeyn
+* wedderkenbåre woordformen öäver alle dialekten
+* wedderkenbåre form vöär de språke algemeyn
 
 De Nysassiske Skryvwyse is en uutwydede versioon van [[Reinhard Franz Hahn]] syn [[Algemeyne Schryvwys']]<ref>http://lowlands-l.net/grammar-new/sounds.php</ref> vöär de [[Noord Leegsaksisch|noordsassisken]] dialekten. Döär dat invögen van eygenskappen uut de hanseatiske skryvtraditioon un moderne lokale skryvwysen is de NSS nu uutbowd vöär dialekten in de heyle språkregioon. Uutwarked het disse skryvwyse de warkgruppe AS2.0, en gruppe van språkaktivisten uut de [[Veluwe]] un [[Tweante|Twente]] van de nedderlandske kante so as Oust[[Westfalen|westfalen]] un [[Sleeswiek-Holstain|Sleeswyk-Holsteyn]] van de düütske kante. 
 
@@ -16,12 +16,12 @@ Aktuelle regionale skryvwysen bruket normalerwyse de düütske or de hollandske 
 
 De Nysassiske Skryvwyse wil grensöäverstryden kontakt ünderstütten un vedderen döär en ortografisken kompromis. Up beide kanten van de grense is de normale konsens "skryv dat, as du dat segst", wat in de praksis bedüüdt "skryv dat, as weer dat hollandsk (or düütsk)". An steade maakt de NSS dat nich nöydig by dat sassiskskryven en ümweg öäver de ortografy van en vrömdspråke to neamen. Anders as eksempelwyse de [[Sass'sche Schrievwies|SASS]] vorlangt see sodännig ouk keyn depe kennis van de düütske ortografy.
 
-== Vorm == 
+== Form == 
 Van de Nysassiske Skryvwyse givt dat up de eyn syde en öäverregionale maksimaalversioon, wo eyn al luudlike vorskealen uut de talryken dialekten med dårstellen kan. Up de ander syde givt dat en reyge regionale minimaalversionen, woneam vorskillene grafemen to eyn grafeem tohoupvated wardet, as de respektivlike dialekt dår neynen luudliken vorskeal meyr het.
 
 De Nysassiske Skryvwyse het drey höyvdprincipien
 * etymology
-* lykvörmigheid
+* lykförmigheid
 * oapen un sloaten sylven (lettergreapen)
 
 un en reyge verdere eygenskappen, dee nedden upvöörd wardet.
@@ -32,14 +32,14 @@ In de maksimaalversioon wardt de skryvwyse van en woord döär syn woordafkumst 
 ===E-apokope===
 Dat in de noorden<ref>Paul Teepe: ''Zur Lautgeographie''. In: Jan Goossens: ''Niederdeutsch - Sprache und Literatur''. Nymünster: Karl Wachholtz Verlag 1973, S. 156.</ref> dialekten un in de dialekten rund dat Ysselmeer<ref>Henk Bloemhoff: ''Klank- en vormleer''. In: Henk Bloemhoff, Jurjen van der Kooi et al.: ''Handboek Nedersaksische Taal- en Letterkunde''. Assen: Van Gorcum 2008, S. 71.</ref> apokopeerde ''e'' wardt wal skreaven. Dat vormindert de optisken vorskealen twüsken de noorden un süden dialekten un maakt, dat eyn up simple un systematiske wyse dat uutblyven van uutluudvorharding un lyktydige uutrekking van de vokalen in de noorden dialekten markeren kan: ''wyse'' = [vi::z], ''breve'' = [brɛ:ɪ̯v].
 
-==Principe 2: lykvörmigheid==
+==Principe 2: lykförmigheid==
 Wöörde wardet so wyd as möäglik dialektintern un interdialektaal konstant up de lyke wyse skreaven.
 
 ===Stimlouswarden van obstruenten===
 An dat ende van en sylve wardet obstruenten (medklinkers) regelhaftig stimlous, sodännig bruukt eyn dat in de skrivt nich wysen. Dat wil seggen, eyn skrivt ''ty'''d''''' - ''ty'''d'''en'' (un nich ''Tie'''t''''' - ''Tie'''d'''en'' as nå [[Sass'sche Schrievwies|SASS]]) un ''skry'''v'''en'' - ''skri'''v'''t'' (un nich as up [[Nederlaands|nedderlandsk]] ''schrij'''v'''en'' - ''schrij'''f'''t'').
 
 ===Assimilationen===
-In uutspråke wardet vaken medklinkers ünder invlood van andere klinkers weglåten or afswakked. Disse regelhaftigen assimilationen wardet nich in de skrivt wysd. Sodennig skrivt eyn ''bild'' - ''bilder'' (nich: ''biller''), ''hand'' - ''handen''/''hände'', ''ölven'', ''seggen'', etc. 
+In uutspråke wardet vaken medklinkers ünder invlood van andere klinkers weglåten or afswakked. Disse regelhaftigen assimilationen wardet nich in de skrivt wysd. Sodännig skrivt eyn ''bild'' - ''bilder'' (nich: ''biller''), ''hand'' - ''handen''/''hände'', ''ölven'', ''seggen'', etc. 
 
 ===Uutsündering===
 En uutsündering van dit principe sint grundwöörde, dee up ''s'', ''sj'' or en anderen sibilant endet. Hyr vorvalt dat ''s'' van dat suffiks ''-st'': ''nervöös'' → ''up dat nervööst'', ''duusjen'' → ''du duusjt''.
@@ -47,27 +47,27 @@ En uutsündering van dit principe sint grundwöörde, dee up ''s'', ''sj'' or en
 ==Principe 3: oapen un sloaten sylven==
 
 ===Vokaallängde===
-En langen [[eankelklaank|monoftong]] wardt in en oapen sylve med en enkel teyken skreaven, in en sloaten sylve dubbeld. Sodennig skrivt eyn ''maken'' - ''maakt'', ''good'' - ''gode''. 
+En langen [[eankelklaank|monoftong]] wardt in en oapen sylve med en enkel teyken skreaven, in en sloaten sylve dubbeld. Sodännig skrivt eyn ''maken'' - ''maakt'', ''good'' - ''gode''. 
 
 ===Uutsündering===
 En uutsündering van dit principe sint de letteren ''e'', ''y'' un ''å'':
 * en lang ''e'' kan ouk in betoonde oapene sylve dubbeld skreaven warden. Dat geldt vöäral by eynsylvige wöörde, eksempelwyse ''hee'' (DE ''er'', NL ''hij'') or ''dee'' (DE ''die'', ''der'', NL ''die'').
-* ''y'' steit altyds vöär en langvokaal. Vordubbeling in sloaten sylve is hyr nich nöydig. Eyn skrivt sodennig ''hyr'' un ''myn'' un nich ''hyyr'' or ''myyn''.
+* ''y'' steit altyds vöär en langvokaal. Vordubbeling in sloaten sylve is hyr nich nöydig. Eyn skrivt sodännig ''hyr'' un ''myn'' un nich ''hyyr'' or ''myyn''.
 * ouk dat ''å'' steit altyds vöär en langvokaal un so doit ouk hyr en vordubbeling in sloaten sylve nich nöydig. Eyn skrivt ''stån'' un ''gån'' un nich ''ståån'' or ''gåån''.
 
 ===Konsonanten an dat sylvenende===
-Vöär dit principe neamet wy boavento afstand van de düütske maneer konsonantenteykens an dat sylvenende dubbeld to skryven. Dat heyt, eyn skrivt ''kan'', ''nat'' un ''wil'' un nich ''kann'', ''natt'' un ''will'' as nå SASS.
+Vöär dit principe neamet wy boavento afstand van de düütske manere konsonantenteykens an dat sylvenende dubbeld to skryven. Dat heyt, eyn skrivt ''kan'', ''nat'' un ''wil'' un nich ''kann'', ''natt'' un ''will'' as nå SASS.
 
 ==Verdere eygenskappen==
 
 ===Paslikmaken van leynwöörde un vrömdwöörde===
 Leynwöörde, dee eyn nich meyr as vrömd ruutkent, wardet skreaven as nå de uutspråke. By vrömdwöörde blivt eyn naeger by de skryvwyse van de geaverspråke, so disse med latynske letteren skreaven wardt. Lykers passet wy ouk de vrömdwöörde up de neddersassiske språke to, wat de achternåkoamen aspekten angeit:
 * Principe van de oapen un sloaten sylven: Langvokalen in sloaten sylve skrivt eyn ouk in vrömdwöörde med twey letteren, as vöärbild ''kanaal'', ''systeem'' un ''kultuur''. 
-* ''c'' wardt ''k'' by de uutspråke /k/ un blivt ''c'' by de uutspråke /ts~s/, eksempelwyse ''konferens(y)'' un ''kakao'', man ''citrone'' un ''centrum''.  
+* ''c'' wardt ''k'' by de uutspråke /k/ un blivt ''c'' by de uutspråke /ts~s/, eksempelwyse ''konferents / konferenty'' un ''kakao'', man ''citrone / citroon'' un ''centrum''.  
 * ''cc'' wardt ''ks'' by de uutspråke /ks/ (''aksent'', ''aksepteren'') un ''kk'' by de uutspråke /k/ (''akkumuleren'', ''akkoord'').
-* ''qu'' wardt by de uutspråke /kv/ döär ''kw'' replaceerd, as byspil ''kwaliteyt'' un ''frekwens(y)''.
+* ''qu'' wardt by de uutspråke /kv/ döär ''kw'' replaceerd, as byspil ''kwaliteyt'' un ''frekwents / frekwenty''.
 * by de uutspråke /k/ wardt ''qu'' algemeyn ''k'', as in ''karantene''. By eygennames un lykhaftigs kan de skryvwyse med ''qu'' bewaard blyven, as vöärbild ''Quebec''. 
-* ''th'' un ''ph'' wardet uplöysd nå ''t'' un ''f'', sodennig skrivt eyn ''teory'', ''tema'', ''telefoon'' un ''foto''.
+* ''th'' un ''ph'' wardet uplöysd nå ''t'' un ''f'', sodännig skrivt eyn ''teory'', ''tema'', ''telefoon'' un ''foto''.
 * ''x'' wardt ''ks'', as in ''eksempel'' un ''kontekst''.
 
 ===Groutskryven van substantiven===
@@ -184,7 +184,7 @@ By de konsonanten wyset sik alleyn minimale vorskealen up dat foneemlevel twüsk
 
 =====Vordeyling van de ē-luud-grafemen=====
 
-Upspletten van ē<sub>2</sub> is nich in alle dialekten passeerd. Vöäral up de nedderlandske kante sint dialekten med upspleaten ē<sub>2</sub> in de mindertal. Upto is dat upspletten nich in elken dialekt up eksaktement desülvige maneer passeerd. Dat heyt, en woord, wat in eyn dialekt ē<sub>2a</sub> het un desülvige uutspråke het as ē<sub>1</sub>, kan in en anderen dialekt ē<sub>2b</sub> un desülvige uutspråke as ē<sub>4</sub> hebben. De skryvwyse volgt de vordeyling in elken dialekt.
+Upspletten van ē<sub>2</sub> is nich in alle dialekten passeerd. Vöäral up de nedderlandske kante sint dialekten med upspleaten ē<sub>2</sub> in de mindertal. Upto is dat upspletten nich in elken dialekt up eksaktement desülvige manere passeerd. Dat heyt, en woord, wat in eyn dialekt ē<sub>2a</sub> het un desülvige uutspråke het as ē<sub>1</sub>, kan in en anderen dialekt ē<sub>2b</sub> un desülvige uutspråke as ē<sub>4</sub> hebben. De skryvwyse volgt de vordeyling in elken dialekt.
 
 {| width="40%"
 | 
@@ -199,11 +199,11 @@ Upspletten van ē<sub>2</sub> is nich in alle dialekten passeerd. Vöäral up de
 ======By splitsing van ē<sub>2</sub>======
 ē<sub>1</sub>: ''skaere'', ''kaese'', ''laeg''<br>
 ē<sub>2a</sub>: ''s'''ae'''pe'', ''r'''ae'''p''<br> 
-ē<sub>2b</sub>: ''steyn'', ''beyn''<br>
+ē<sub>2b</sub>: ''st'''ee'''n'', ''b'''ee'''n''<br>
 ē<sub>3</sub>: ''beide'', ''leiden'', ''geil''<br>
 ē<sub>4</sub>: ''leev'', ''vlegen'', ''geten''
 |}
-In dialekten wår ē<sub>2</sub> esplitsed wördt, is vake vöär -r geyn sprake van splitsing, dit wördt dan ouk eskreaven as <-eyr>. Is der wel sprake van splitsing vöär -r dan wördt dat ouk in skrivt wearegeaven <-aer>.
+In dialekten wår ē<sub>2</sub> esplitsed wördt, is vake vöär -r geen språke van splitsing, dit wördt dan ouk eskreaven as <-eyr>. Is der wel sprake van splitsing vöär -r dan wördt dat ouk in skrivt weaderegeaven <-aer>.
 
 ======Uutspråkvergelyking ē-luden======
 {| class="wikitable sortable"
@@ -276,7 +276,7 @@ In de noordsassisken dialekten wardt vandage neyn vorskeal meyr maked twüsken o
 |-
 | a || a || '''a'''xtōu <br>l'''anđan || '''a'''hto <br>l'''a'''nd || '''a'''cht <br>l'''a'''nd || '''a'''cht <br>L'''a'''nd || '''a'''cht <br>l'''aa'''nd || '''a'''cht <br>L'''a'''nd || '''a'''cht <br>l'''aa'''nd || acht <br>land || acht <br>Land 
 |-
-| ä || ümluud van a || l'''a'''nʒiþō || || l'''ä'''ngte || L'''ä'''ngde || || L'''ä'''ngte || l'''ea'''ngte || lengte || Länge 
+| ä || ümluud van a || l'''a'''nʒiþō || || l'''ä'''ngde || L'''ä'''ngde || || L'''ä'''ngte || l'''ea'''ngte || lengte || Länge 
 |-
 | e || e || k'''a'''nnjanan <br>x'''e'''lpanan || k'''e'''nnian <br>h'''e'''lpan || k'''e'''nnen <br>h'''e'''lpen(, h'''ö'''lpen) || k'''e'''nnen <br>h'''e'''lpen, h'''ö'''lpen || k'''e'''nnen <br>h'''e'''lpen || k'''e'''nnen <br>h'''e'''lpen || k'''e'''nn <br>h'''e'''lpn || kennen <br>helpen || kennen <br>helfen  
 |- 
