*Empty MediaWiki Message*

--- a/Polen.mw
+++ b/Polen.mw
@@ -1,20 +1,38 @@
-{{wrapper}}
-|
-{| style="width: 100%; background: none;"
-|[[Bestaand:Flag of Poland.svg|120px|border|right|Vlagge van Pooln]]
-|[[Bestaand:Coat of arms of Poland-official.png|right|73px|Woapen van Pooln]]
-|}
-|}
-[[Bestaand:LocationPoland.png|215px|right|Ligging van Pooln in Uropa]]
+{{Laandtabel-vel
+| naaminlaanstaal = Rzeczpospolita Polska
+| vlagge          = Flag of Poland.svg
+| wapen           = Herb Polski.svg
+| lokasie         = EU-Poland.svg
+| talen           = [[pools]]k
+| heufstad        = [[Warsjau]]
+| religie         = [[Katholicisme|katolik]]&nbsp;(87%)<ref name=people>[https://www.cia.gov/library/publications/the-world-factbook/geos/pl.html|title=The World Factbook — Central Intelligence Agency, 10 april 2019]</ref>
+| regeringsvorm   = [[Republiek|republik]]
+| pctwaoter       = 2,6
+| km2             = 312.696
+| inwoeners       = 38.433.600
+| dichtheid       = 123
+| breedtegroad    = 52/8/49/N
+| lengtegroad     = 19/22/41/E
+| region          = PL
+| munteenheid     = [[Poolse złoty|złoty]]
+| valutacode      = PLN
+| tiedzone        = [[UTC+1|+1]] (zomer [[UTC+2|+2]])
+| volkslied       = [[Mazurek Dąbrowskiego]]
+| feesdag         = [[3 mei]] <small>(Dag van de Grundwet)</small>, [[11 november]] <small>([[Poolse Onafhankelijkheidsdag|Unafhankelikheidsdag]])</small>
+| tld             = pl
+| laandcode       = POL
+| til             = 48
+}}
+'''Polen''' ([[Pools|poolsk]]: ''Polska''), vuluut '''Republik Polen''' (poolsk: ''Rzeczpospolita Polska'') is een land in [[Centraol-Europa|Middeneuropa]]. Et land grenst in et westen an [[Duutslaand|Düütskland]], in et süden an [[Tsjechie|Tjechie]] en [[Slowaaknlaand|Slowakye]], in et ousten an [[Litouwen|Litauwen]], [[Wit-Ruslaand|Witrusland]] en de [[Oekraïne|Ukraine]]. In t noorden grenst et an de [[Oostzee|Oustsey]] en [[Rusland]] (de eksklave [[Kaliningrad]]). Et land hevt ne üppervlakde van 312.696 veerkante kilometer<ref>[https://stat.gov.pl/obszary-tematyczne/ludnosc/ludnosc/powierzchnia-i-ludnosc-w-przekroju-terytorialnym-w-2018-roku,7,15.html Główny Urząd Statystyczny, gegeavens vöär 2018, per 01-01-2018.]</ref> en et telt ruum 38,4 miljoon inwonners. De höyvdstad en groutste stad van et land is [[Warsjau]]. Andere groute städen bint [[Krakau]] (''Kraków''), [[Lodz]] (''Łódź''), [[Breslau]] (''Wrocław''), [[Posen]] (''Poznań''), [[Danzig]] (''Gdańsk'') en [[Stettin]] (''Szczecin'').
 
-'''Pooln''' ([[Pools]]: ''Polska''), voloet '''Republiek Pooln''' (''Rzeczpospolita Polska'') is n laand in [[Mildn-Uropa]] en t is lid van de [[Uropese Unie]]. t Laand greanst in t westn an [[Duutslaand]], in t zuudn an [[Tsjechie]] en [[Slowaaknlaand]], in t oostn an [[Litauwn]], [[Wit-Roslaand]] en de [[Oekraïne]]. In t noordn greanst t an de [[Oostzee]] en [[Roslaand]] (de eksklave [[Kaliningrad]]). De heufdstad is [[Warschau]]. t Laand hef ne öppervlakte van 312.696 veerkaante kilometer<ref>[https://stat.gov.pl/obszary-tematyczne/ludnosc/ludnosc/powierzchnia-i-ludnosc-w-przekroju-terytorialnym-w-2018-roku,7,15.html Główny Urząd Statystyczny, gegeavens vöär 2018, per 01-01-2018.]</ref> en t tealt 38,486 (2014) miljoen inwonners. Dat gef ne bevolkingsdichtheid van 123 inwonners/km².
+Ståtkündig is Polen een [[parlementäre republik]] en een [[eynheidsståt]], underverdeyld in 16 [[woiwodskap]]pen. Polen is lid van een grout antal internationale organisatys, wårunder de [[Europese Unie|Europeeske Uny]], de [[Vereynigde Natys]], de [[Noordatlantiske Verdragsorganisaty|NAVO]], de [[Wearldhandelsorganisaty]] en de [[Organisaty vöär Ekonomiske Samenwarking en Untwikkeling|OESU]].
 
-De officiële taal is Poolsk. t Grootste deel van de Pooln is rooms-katholiek (87%).
+Undanks de groute verrinneweringen van de [[Tweede Wereldoorlog|Tweyde Wearldoorlog]], is een grout deyl van et poolske kulturele arvgood bewaerd ebleaven. In 2017 waren der 15 poolske arvgoodplaatsen up de [[UNESCO]] [[Wearldarvgoodlyste]].
 
 == Referentys ==
 <references/>
 
-== Oetgoande verwiezings ==
+== Uutgånde verwysings ==
 {{Commons|Poland}}
 
 [[Kategorie:Tweants artikel]]
