*Empty MediaWiki Message*

--- a/Polen.mw
+++ b/Polen.mw
@@ -23,7 +23,7 @@
 | laandcode       = POL
 | til             = 48
 }}
-'''Polen''' ([[Pools|poolsk]]: ''Polska''), vuluut '''Republik Polen''' (poolsk: ''Rzeczpospolita Polska'') is een land in [[Centraol-Europa|Middeneuropa]]. Et land grenst in et westen an [[Duutslaand|Düütskland]], in et süden an [[Tsjechie|Tjechie]] en [[Slowaaknlaand|Slowakye]], in et ousten an [[Litouwen|Litauwen]], [[Wit-Ruslaand|Witrusland]] en de [[Oekraïne|Ukraine]]. In t noorden grenst et an de [[Oostzee|Oustsey]] en [[Rusland]] (de eksklave [[Kaliningrad]]). Et land hevt ne üppervlakde van 312.696 veerkante kilometer<ref>[https://stat.gov.pl/obszary-tematyczne/ludnosc/ludnosc/powierzchnia-i-ludnosc-w-przekroju-terytorialnym-w-2018-roku,7,15.html Główny Urząd Statystyczny, gegeavens vöär 2018, per 01-01-2018.]</ref> en et telt ruum 38,4 miljoon inwonners. De höyvdstad en groutste stad van et land is [[Warsjau]]. Andere groute städen bint [[Krakau]] (''Kraków''), [[Lodz]] (''Łódź''), [[Breslau]] (''Wrocław''), [[Posen]] (''Poznań''), [[Danzig]] (''Gdańsk'') en [[Stettin]] (''Szczecin'').
+'''Polen''' ([[Pools|poolsk]]: ''Polska''), vuluut '''Republik Polen''' (poolsk: ''Rzeczpospolita Polska'') is een land in [[Centraol-Europa|Middeneuropa]]. Et land grenst in et westen an [[Duutslaand|Düütskland]], in et süden an [[Tsjechie]] en [[Slowaaknlaand|Slowakye]], in et ousten an [[Litouwen|Litauwen]], [[Wit-Ruslaand|Witrusland]] en de [[Oekraïne|Ukraine]]. In t noorden grenst et an de [[Oostzee|Oustsey]] en [[Rusland]] (de eksklave [[Kaliningrad]]). Et land hevt ne üppervlakde van 312.696 veerkante kilometer<ref>[https://stat.gov.pl/obszary-tematyczne/ludnosc/ludnosc/powierzchnia-i-ludnosc-w-przekroju-terytorialnym-w-2018-roku,7,15.html Główny Urząd Statystyczny, gegeavens vöär 2018, per 01-01-2018.]</ref> en et telt ruum 38,4 miljoon inwonners. De höyvdstad en groutste stad van et land is [[Warsjau]]. Andere groute städen bint [[Krakau]] (''Kraków''), [[Lodz]] (''Łódź''), [[Breslau]] (''Wrocław''), [[Posen]] (''Poznań''), [[Danzig]] (''Gdańsk'') en [[Stettin]] (''Szczecin'').
 
 Ståtkündig is Polen een [[parlementäre republik]] en een [[eynheidsståt]], underverdeyld in 16 [[woiwodskap]]pen. Polen is lid van een grout antal internationale organisatys, wårunder de [[Europese Unie|Europeeske Uny]], de [[Vereynigde Natys]], de [[Noordatlantiske Verdragsorganisaty|NAVO]], de [[Wearldhandelsorganisaty]] en de [[Organisaty vöär Ekonomiske Samenwarking en Untwikkeling|OESU]].
 
