*Empty MediaWiki Message*

--- a/Nysassiske_Skryvwyse.mw
+++ b/Nysassiske_Skryvwyse.mw
@@ -12,9 +12,9 @@ De Nysassiske Skryvwyse is en uutwydede versioon van [[Reinhard Franz Hahn]] syn
 
 == Nütten un achtergrund == 
 
-Aktuelle regionale skryvwysen bruket normalerwyse de düütske or de hollandske ortografy as model, med lütte modifikationen. In warklikheid holdet sik nich veale lüde strikt an disse skryvwysen. De meyrsten kennet dee gaar nich or tomindst nich de details. Dårvöär bruket de öävertal lüde vöär ear aldääglike skryvery de düütsken or hollandsken skryvregels in en spontane wyse. Dit vöört to unnöydige hindernissen by dat beidsydige vorstån. Nich de düütske noch de hollandske ortografy is skapen vöär dat skryven van de sassiske språke. Sodännig mankeret vardige teykens vöär en reyge luden, wo de skryverslüde sülven löysings vöär vinden möätet. Up de nedderlandske kante is dat resultaat vaken en vealheid an diakritiske teykens un dubbelde or dreydubbelde vokaalteykens. Up de düütske kante is de tendens dårvöär relevante luudlike vorskealen, dee düütsk nich het, ouk up sassisk nich to skryven.   
+Aktuelle regionale skryvwysen bruket normalerwyse de düütske or de nedderlandske ortografy as model, med lütte modifikationen. In warklikheid holdet sik nich veale lüde strikt an disse skryvwysen. De meyrsten kennet dee gaar nich or tomindst nich de details. Dårvöär bruket de öävertal lüde vöär ear aldääglike skryvery de düütsken or nedderlandsken skryvregels in en spontane wyse. Dit vöört to unnöydige hindernissen by dat beidsydige vorstån. Nich de düütske noch de nedderlandske ortografy is skapen vöär dat skryven van de sassiske språke. Sodännig mankeret vardige teykens vöär en reyge luden, wo de skryverslüde sülven löysings vöär vinden möätet. Up de nedderlandske kante is dat resultaat vaken en vealheid an diakritiske teykens un dubbelde or dreydubbelde vokaalteykens. Up de düütske kante is de tendens dårvöär relevante luudlike vorskealen, dee düütsk nich het, ouk up sassisk nich to skryven.   
 
-De Nysassiske Skryvwyse wil grensöäverstryden kontakt ünderstütten un vedderen döär en ortografisken kompromis. Up beide kanten van de grense is de normale konsens "skryv dat, as du dat segst", wat in de praksis bedüüdt "skryv dat, as weer dat hollandsk (or düütsk)". An steade maakt de NSS dat nich nöydig by dat sassiskskryven en ümweg öäver de ortografy van en vrömdspråke to neamen. Anders as eksempelwyse de [[Sass'sche Schrievwies|SASS]] vorlangt see sodännig ouk keyn depe kennis van de düütske ortografy.
+De Nysassiske Skryvwyse wil grensöäverstryden kontakt ünderstütten un verderen döär en ortografisken kompromis. Up beide kanten van de grense is de normale konsens "skryv dat, as du dat segst", wat in de praksis bedüüdt "skryv dat, as weer dat nedderlandsk (or düütsk)". An steade maakt de NSS dat nich nöydig by dat sassiskskryven en ümweg öäver de ortografy van en vrömdspråke to neamen. Anders as eksempelwyse de [[Sass'sche Schrievwies|SASS]] vorlangt see sodännig ouk keyn depe kennis van de düütske ortografy.
 
 == Form == 
 Van de Nysassiske Skryvwyse givt dat up de eyn syde en öäverregionale maksimaalversioon, wo eyn al luudlike vorskealen uut de talryken dialekten med dårstellen kan. Up de ander syde givt dat en reyge regionale minimaalversionen, woneam vorskillene grafemen to eyn grafeem tohoupvated wardet, as de respektivlike dialekt dår neynen luudliken vorskeal meyr het.
@@ -199,7 +199,7 @@ Upspletten van ē<sub>2</sub> is nich in alle dialekten passeerd. Vöäral up de
 ======By splitsing van ē<sub>2</sub>======
 ē<sub>1</sub>: ''skaere'', ''kaese'', ''laeg''<br>
 ē<sub>2a</sub>: ''s'''ae'''pe'', ''r'''ae'''p''<br> 
-ē<sub>2b</sub>: ''st'''ee'''n'', ''b'''ee'''n''<br>
+ē<sub>2b</sub>: ''steyn'', ''beyn''<br>
 ē<sub>3</sub>: ''beide'', ''leiden'', ''geil''<br>
 ē<sub>4</sub>: ''leev'', ''vlegen'', ''geten''
 |}
