--- a/FC_Tweante.mw
+++ b/FC_Tweante.mw
@@ -1,1 +1,28 @@
+[[Ofbeelding: Noaberpoort.jpg|thumb|right|De [[noaberschap|noaberpoorte]] van de Grolsch Veste, t stadion van FC Tweante]]
+'''FC Twente''' of '''FC Tweante''' is ne [[Neerlaand]]se [[voetbal]]verenige den at an [[betaald voetbal]] dut. Ze doot seend öare oprichting in [[1965]] met in de Neerlaandse [[Earedivisie (voetbal)|Eredivisie]], behalve in seizoen [[1983]]/[[1984]]. t Eerste elftal wörd rechtevoort etraind duur [[Alfred Schreuder]], den at doarin ehulpn wörd duur [[Boudewijn Pahlplatz]] en [[Youri Mulder]]. t beloftenelftal wörd etraind duur [[Patrick Kluivert]].
 
+Op [[2 mei]] [[2010]] wör FC Tweante vuur t eerst in de geskiedenisse laandskampioen van Neerlaand, duur te winn van [[NAC]] oet [[Breda]] met 2-0. n [[8 mei|8sten mei]] [[2011]] wunn ze n beker van [[Ajax Amsterdam|AFC Ajax]], duur met 3-2 te winn. n [[30 juli|30sten juli]] wunn ze nog s van Ajax met 2-1, noen veur de Johan Cruijff Schale.
+
+== Ontstoan ==
+FC Tweante is ontstoan in 1965 oet nen saamngoan van de vrogere [[Sportclub Enschede]] en de [[Enschedese Boys]]. Doar deedn ze al wal völle lenger oawer, mear t köm dr nooit van. Doew at t slechter gung met beaide voetbalvereniges, beent ze op [[13 april]] saamn verdan egoan oonder n naamn ''FC Tweante'', den at al op [[11 februoari]] ekeuzn wör.
+
+== Oonderkomns ==
+Tweante spölt de thoeswedstriedn in de [[Grolsch Veste]], den at vroger t Arkestadion heetn en doarveur spöllen ze in et Diekmanstadion. Et Arkestadion wör op 1 mei [[1998]] lös edoan en dr kon eerst 13.500 man in, mear later wör det terugge ebracht noar 13.250. Seend seizoen [[2008]]/[[2009]] is dr nen tweedn reenk bie boawnop ezat, zodet dr non 24.000 man in kan.
+In juli [[2011]] is biej bouwwarkzaamheden n stukke van t dak van t stadion dale evallen, woarbiej twee man um t leaven bunt ekommen.
+
+== Anhangers ==
+De anhangers van FC Tweante stoat bekeand as slim fanatiek, mear dr beent twee anhangersvereniges, ''Vak-P'' en de ''Vriendenkring'' dee at vanof t begin t trouwste an de club warn. De Tweante-anhangers hebt oawer t algemeen nen goodn baand met de anhangers van t [[Duutslaand|Duutse]] [[Schalke '04]].
+
+== Supportersvereniges ==
+Duur heel Tweante hen beent dr mear as tien offisjele supportersvereniges, zo as bievuurbeeld in [[Hengel (Oaveriessel)|Hengel]], [[Maarkel]], [[Riesn]], [[Vjenne]], [[Dealdn]], [[Nijverdal]], [[Wierdn]], [[Goor]], [[Boorn|Boarn]] en [[Eanter]]. Disse vereniges organiseert vuur n leeg bedrag verskeaidene busreaizn noar wedstriedn en komt wieter bie mekoar in bepoalde stamkafees um wedstriedn te bekiekn. Ook in Duutslaand kort oawer de greanze is ne anhangersverenige, seend [[2007]] in [[Australi'je (land)|Australië]], oonder n naamn ''Tukkeroos'', en per 2011 in [[Skotlaand]], in t doarp [[Stranraer]].
+
+== Vrouwleuvoetbal ==
+Seend seizoen [[2007]]/[[2008]] hef Tweante nen eegn vrouwleu-elftal, den at in de [[Earedivisie (vrouwleuvoetbal)|Earedivisie vuur vrouwleu]] spölt. In t eerste joar wör de [[KNVB]] beker ewunn.
+
+== Oetgoande verbeendige ==
+* [http://www.fctwente.nl/ www.fctwente.nl offisjele webstea van Tweante]
+
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Voetbal]]
+[[Kategorie:Sport in Oaveriessel]]
+[[Kategorie:Eanske]]
