*Empty MediaWiki Message*

--- a/Alaska.mw
+++ b/Alaska.mw
@@ -51,7 +51,7 @@ Ne strekke van ongevear 100 km op t noordn van Talkeetna is nog aait nit oawer d
 
 t Alaskaanse spoer is nit verbeundn met rest van Noord-Amerika. In 2000 steeldn t Amerikaanse Kongres $6 miljoen beskikboar um te oonderzeukn of t spoer met Kannada en de rest van de Amerikaanse stoatn te verbeendn was.
 
-Tusken Whittier en de stad [[Seattle]] in n Amerikaansen stoat [[Washington (stoat)|Washington]] geet nen veardienst den't treinwaagns vervoort.
+Tusken Whittier en de stad [[Seattle]] in n Amerikaansen stoat [[Washington (stoat)|Washington]] geet nen veardienst den't treinwaagns vervoort. en toan gingen ze naor mars.
 
 {{Verenigde Stoaten}}
 
