Wiezigingen deur [[Special:Contributions/83.247.19.183|83.247.19.183]] hersteld tot de versie nao de leste wieziging deur [[User:Wwikix|Wwikix]]

--- a/Alaska.mw
+++ b/Alaska.mw
@@ -16,7 +16,7 @@
 | antal graafschappen = 18 + 1 [[unorganized borough]]
 }}
 '''Alaska''' (sprek oet: {{IPA|/ʌˈlʌska/}}) is nen stoat van de [[Verienigde Staoten van Amerika|Verenigde Stoatn van Amerika]]. Wat oppervlakte angeet is t de grötste stoat. t Ligt op t oeterste peuntjen van t [[Noord-Amerika]]anse wearlddeel, met op t oostn [[Kanneda|Kannada]], de [[Noordelike Ieszee]] op t noordn en de [[Grote Oseaan]] op t zuudn en t westn. Nog mear noar t westn ligt [[Ruslaand]], oawer de [[Beringstroat]]. De heuwdstad van Alaska is [[Juneau]], mer zowat de helfte van de 710.231 inwonners van Alaska(telling van [[2010]]) wont in (de vuursteadn van) de grötste stad [[Anchorage]], vuur de rest wont dr weainig leu; Alaska is n dunstbevolkten stoat van Amerika.
-==piemel==
+
 Alaska wör ekocht van t [[Russiese Riek]] op [[30 meert|n 30sten meart]] [[1867]] vuur mer $7,2 miljoen (umme reknd noar hudige wearde: €79,2 miljoen), umdet Ruslaand meann at t laand nit völle weard was. Ook in Amerika warn ze dr nit blie met, en n ankoop wör eerst ''Seward's Folly'' eneumd (''Seward's Domheaid''), noar n Amerikaansen minister van Finansiën [[William Seward]], den't de anskaf deed. Umme reknd kostn Alaska twee seant per [[Oolde Neersassiese Moaten|beunder]] ($4.74/km²). t Laand oondergung verskeaidene administratieve veraanderings vuurdet t in eliefd wör op [[11 mei|n 11den mei]] [[1912]], en n 49sten stoat van de VS op [[3 jannewaori|3 januwoari]] [[1959]].
 
 n Naam ''Alaska'' (Аляска) wör al in t Russies an enömn van t [[Alioeties]]e "alaxsxaq", wat "t heuwdlaand" beteeknt, of letterliker: "t objekt woer't de woarking van de zee hengeet". t Wörd ook wal es Alyeska neumd ("t Grote laand"), ook n Alioeties woard met n zelfden oorsproonk.
@@ -29,7 +29,7 @@ n Stoat greanzet in t oostn an de Kannadese stoatn [[Yukon]] en [[Brits-Kolumbia
 
 Alaska is n stoat met de grötste laandvlakte 1.518.800 km2. Mear as twee moal zo groot as [[Texas (stoat)|Texas]], n tweede-grötsten stoat. Op de hele wearld zeent dr mer 18 laandn grötter as Alaska.
 
-
+== Ekonomie ==
 t [[BNP]] van Alaska was in [[2007]] $44,9 miljard. t Gemiddelde loon per inwonner was $40.042. De [[ekonomie]] dreeit vuural op [[öllie]]- en [[eardgas]]winning; mear as 80% van de stoatskas keump van braandstofwinning. A'j de braandstofwinning nit metreknt is de belangriekste bron van inkomsten de [[viskerieje]]. t Grötste oetvoorprodukt is vis: [[zalm]], [[kabeljauw]], [[pollak]] en [[krab]].
 
 Laanbouw is mer n kleain deel van de Alaskaanse ekonomie. De produksie is heuwdzakelik bedoold vuur gebroek binn de stoat. Doaroonder vaalt mestkalver, [[zuvel|zuwel]], [[greunte]] en [[vee]]. t Meeste bewoarkte of fabriseerde etn wörd importeerd.
@@ -51,7 +51,7 @@ Ne strekke van ongevear 100 km op t noordn van Talkeetna is nog aait nit oawer d
 
 t Alaskaanse spoer is nit verbeundn met rest van Noord-Amerika. In 2000 steeldn t Amerikaanse Kongres $6 miljoen beskikboar um te oonderzeukn of t spoer met Kannada en de rest van de Amerikaanse stoatn te verbeendn was.
 
-Tusken Whittier en de stad [[Seattle]] in n Amerikaansen stoat [[Washington (stoat)|Washington]] geet nen veardienst den't treinwaagns vervoort. en toan gingen ze naor mars.
+Tusken Whittier en de stad [[Seattle]] in n Amerikaansen stoat [[Washington (stoat)|Washington]] geet nen veardienst den't treinwaagns vervoort.
 
 {{Verenigde Stoaten}}
 
