--- a/Luxembörg_(land).mw
+++ b/Luxembörg_(land).mw
@@ -2,7 +2,7 @@
 | naemeinlaanstael = Grand-Duché de Luxembourg<br />Groussherzogtum Lëtzebuerg<br />Großherzogtum Luxemburg
 | naam = Luxemburg
 | vlagge = [[Bestaand:Flag of Luxembourg.svg|122px|Vlagge van Luxembörg]]
-| waopen = [[Bestaand:Coat of Arms of Luxembourg.svg|150px|Wåpen van Luxembörg]]
+| waopen =
 | lekaosie = LocationLuxembourg.png
 | breedtegroad=49/45//N | lengtegroad=6///E | region=LU
 | taelen = [[frans]]k, [[luxembörgs]]k, [[duuts|düütsk]]
